# This is an automake file for NCL.
# Ed Hartnett 9/4/18

man3_MANS = agback.m agchil.m aggetc.m aggetr.m agsetc.m agsetr.m	\
autograph.m ezmy.m agbnch.m agchnl.m aggetf.m agpwrt.m agsetf.m		\
agstup.m autograph_params.m ezxy.m agchax.m agcurv.m aggeti.m		\
agrstr.m agseti.m agutol.m displa.m ezy.m agchcu.m agdshn.m aggetp.m	\
agsave.m agsetp.m anotat.m ezmxy.m
