# This is an automake file for NCL.
# Ed Hartnett 9/4/18

man3_MANS = conpack.m conpack_params.m cpback.m cpchcf.m cpchcl.m	\
cpchhl.m cpchil.m cpchll.m cpcica.m cpclam.m cpcldm.m cpcldr.m		\
cpcltr.m cpcnrc.m cpdrpl.m cpezct.m cpgetc.m cpgeti.m cpgetr.m		\
cplbam.m cplbdr.m cpmpxy.m cpmviw.m cpmvrw.m cppkcl.m cppklb.m		\
cprect.m cprset.m cpscae.m cpsetc.m cpseti.m cpsetr.m cpsprs.m		\
cpsps1.m cpsps2.m
