# This is an automake file for NCL.
# Ed Hartnett 9/4/18

man3_MANS = findg.m ncarg_cbind.m ncargcc.m ncarg_env.m ncargex.m ncargf77.m ncargf90.m ncargfile.m ncarg_gks_cbind.m ncarg_gks.m ncargintro.m ncargrun.m ncargsrc.m ncargversion.m ncarlogo2ps.m ncgm2gif.m ncgm2mpeg.m pre2ncgm.m psblack.m psplit.m pswhite.m 