# This is an automake file for NCL.
# Ed Hartnett 9/4/18

man3_MANS = cfux.m cfuy.m clsgks.m cmfx.m cmfy.m cmux.m cmuy.m cpfx.m cpfy.m cpux.m cpuy.m cufx.m cufy.m curve.m fl2int.m frame.m frstpt.m getset.m getsi.m getusv.m kfmx.m kfmy.m kfpx.m kfpy.m kmpx.m kmpy.m kpmx.m kpmy.m kumx.m kumy.m kupx.m kupy.m line.m mxmy.m opngks.m plotif.m plotit.m point.m points.m pwrit.m seti.m set.m setusv.m sflush.m spps_converters.m spps.m spps_params.m vector.m wtstr.m 