# This is an automake file for NCL.
# Ed Hartnett 9/4/18

man3_MANS = tdclrs.m tdctri.m tddtri.m tdez2d.m tdez3d.m tdgeti.m tdgetr.m tdgrds.m tdgrid.m tdgtrs.m tdinit.m tditri.m tdlbla.m tdlbls.m tdline.m tdlnpa.m tdmtri.m tdotri.m tdpack.m tdpack_params.m tdpara.m tdplch.m tdprpa.m tdprpi.m tdprpt.m tdseti.m tdsetr.m tdsort.m tdstri.m tdstrs.m 