# This is an automake file for NCL.
# Ed Hartnett 8/30/18

# SUBDIRS = Iftran areas autogrph colconv common concom conpack		\
# conpackt conran conrec conterp dashchar dashpack ezmap ezmapa ezmapb	\
# ezmapc gflash gridal hafton histgr isosrf isosrfhr labelbar ngmisc	\
# plotchar polypack pwritx pwrity pwrzi pwrzs pwrzt softfill spps		\
# srface stitle strmln support tdpack threed vaspackt velvct wmap		\
# areasC autogrphC colconvC conpackC conpacktC commonC dashcharC		\
# dashpackC ezmapCC gflashC gridalC histgrC isosrfC labelbarC ngmiscC	\
# plotcharC polypackC softfillC sppsC srfaceC stitleC supportC strmlnC	\
# tdpackC threedC velvctC wmapC

SUBDIRS = Iftran areas
