# This is an automake file for NCL.
# Ed Hartnett 9/3/18

testsdir = $(prefix)/lib/ncarg/tests
tests_HEADERS = tagupw.f tautog.f tcnsmt.f tcolcv.f tconaq.f tconpa.f	\
tdashc.f tdashp.f tdshpk.f tezmpa.f tgflas.f thafto.f thstmv.f		\
tisosr.f tpltch.f tpwrtx.f tpwrzi.f tpwrzt.f tsoftf.f tstitl.f		\
tthree.f tareas.f tcnqck.f tcnsup.f tconan.f tconas.f tconre.f		\
tdashl.f tdashs.f tezmap.f tezmpb.f tgrida.f thstgr.f tisohr.f		\
tlblba.f tppack.f tpwry.f tpwrzs.f tseter.f tsrfac.f tstrml.f		\
tvelvc.f
