# This is an automake file for NCL
# Ed Hartnett 9/5/18

man3_MANS = c_csc2sd.m c_csc2s.m c_csgetd.m c_csgeti.m c_csgetr.m c_css2cd.m c_css2c.m c_cssetd.m c_csseti.m c_cssetr.m c_cssgridd.m c_cssgrid.m c_csstrid.m c_csstri.m c_csvorod.m c_csvoro.m csc2sd.m csc2s.m csgetd.m csgeti.m csgetr.m css2cd.m css2c.m cssetd.m csseti.m cssetr.m cssgridd.m cssgrid_errors.m cssgrid.m cssgrid_params.m css_overview.m csstrid.m csstri.m csvorod.m csvoro.m 