# This is an automake file for NCL
# Ed Hartnett 9/5/18

man3_MANS = c_dsgetc.m c_dsgeti.m c_dsgetrd.m c_dsgetr.m c_dsgrid2d.m c_dsgrid2s.m c_dsgrid3d.m c_dsgrid3s.m c_dspnt2d.m c_dspnt2s.m c_dspnt3d.m c_dspnt3s.m c_dssetc.m c_dsseti.m c_dssetrd.m c_dssetr.m dsgetc.m dsgeti.m dsgetrd.m dsgetr.m dsgrid2d.m dsgrid2s.m dsgrid3d.m dsgrid3s.m dsgrid_errors.m dsgrid.m dsgrid_params.m dspnt2d.m dspnt2s.m dspnt3d.m dspnt3s.m dssetc.m dsseti.m dssetrd.m dssetr.m 