# This is an automake file for NCL
# Ed Hartnett 9/5/18

man3_MANS = c_ftcurvd.m c_ftcurvi.m c_ftcurv.m c_ftcurvpi.m c_ftcurvp.m c_ftcurvps.m c_ftcurvs1.m c_ftcurvs.m c_ftgetc.m c_ftgetfa_data.m c_ftgetfa_size.m c_ftgeti.m c_ftgetr.m c_ftkurvd.m c_ftkurv.m c_ftkurvpd.m c_ftkurvp.m c_ftsetc.m c_ftsetfa.m c_ftseti.m c_ftsetr.m c_ftsurf.m curv1.m curv2.m curvd.m curvi.m curvp1.m curvp2.m curvpi.m curvps.m curvs1.m curvs2.m curvs.m fitgrid.m fitgrid_params.m kurv1.m kurv2.m kurvd.m kurvp1.m kurvp2.m kurvpd.m surf1.m surf2.m 