# This is an automake file for NCL
# Ed Hartnett 9/5/18

# bin_PROGRAMS = ncl

# ncl_SOURCES = AddBuiltIns.c AddFileFormats.c AddHLUObjs.c		\
# AddIntrinsics.c AdvancedFileSupport.c AttSupport.c BuiltInFuncs.c	\
# BuiltInSupport.c complete.c craybin.c ctoiee.c DataSupport.c date.c	\
# editline.c Execute.c FileSupport.c Formats.c GetGrids.c guiFuncs.c	\
# h5reader.c h5writer.c HLUFunctions.c HLUSupport.c hphack.c InitData.c	\
# io.c javaAddFuncs.c javaAddProto.c ListSupport.c Machine.c Memory.c	\
# NclAdvancedFile.c NclAdvancedGroup.c NclAdvancedOGR.c NclApi.c		\
# NclAtt.c Ncl.c NclCCM.c NclCoordVar.c NclData.c NclDriver.c NclFile.c	\
# NclFileVar.c NclGRIB2.c NclGRIB.c NclGroup.c NclHDF5.c NclHDF.c		\
# NclHDFEOS5.c NclHDFEOS.c NclHLUObj.c NclHLUVar.c NclList.c		\
# NclMultiDValHLUObjData.c NclMultiDVallistData.c				\
# NclMultiDValnclfileData.c NclNetCDF4.c NclNetCdf.c NclNewHDF5.c		\
# NclNewHDFEOS5.c NclOGR.c NclOneDValCoordData.c NclProf.c NclTime.c	\
# NclType.c NclTypelist.c NclUserFileFormStub.c NclUserFuncStub.c		\
# NclUserHLUStub.c NclVar.c openclAddFuncs.c openclAddProto.c		\
# OpsFuncs.c PrintToken.c SrcTree.c subprocess.c Symbol.c sysunix.c	\
# Translate.c userAddFuncs.c userAddProto.c VarSupport.c yywrap.c

include_HEADERS = AdvancedFileSupport.h ApiRecords.h AttSupport.h	\
ccmhdr.h cptec_254_gtb.h DataSupport.h date.h defs.h dwd_002_gtb.h	\
dwd_201_gtb.h dwd_202_gtb.h dwd_203_gtb.h dwd_204_gtb.h dwd_205_gtb.h	\
dwd_206_gtb.h dwd_207_gtb.h ecmwf_128_gtb.h ecmwf_129_gtb.h		\
ecmwf_130_gtb.h ecmwf_131_gtb.h ecmwf_132_gtb.h ecmwf_133_gtb.h		\
ecmwf_140_gtb.h ecmwf_150_gtb.h ecmwf_151_gtb.h ecmwf_160_gtb.h		\
ecmwf_162_gtb.h ecmwf_170_gtb.h ecmwf_171_gtb.h ecmwf_172_gtb.h		\
ecmwf_173_gtb.h ecmwf_174_gtb.h ecmwf_175_gtb.h ecmwf_180_gtb.h		\
ecmwf_190_gtb.h ecmwf_200_gtb.h ecmwf_201_gtb.h ecmwf_210_gtb.h		\
ecmwf_211_gtb.h ecmwf_213_gtb.h ecmwf_214_gtb.h ecmwf_215_gtb.h		\
ecmwf_217_gtb.h ecmwf_218_gtb.h ecmwf_219_gtb.h ecmwf_220_gtb.h		\
ecmwf_221_gtb.h ecmwf_228_gtb.h ecmwf_230_gtb.h ecmwf_234_gtb.h		\
editline.h editline_unix.h FileSupport.h fnmoc_gtb.h fsl0_gtb.h		\
fsl1_gtb.h fsl2_gtb.h h5data_struct.h HluClasses.h HLUFunctions.h	\
HLUSupport.h jma_3_gtb.h jra55_gtb.h Keywords.h ListSupport.h		\
Machine.h mpi_128_gtb.h mpi_180_gtb.h mpi_181_gtb.h mpi_199_gtb.h	\
ncep_128_gtb.h ncep_129_gtb.h ncep_130_gtb.h ncep_131_gtb.h		\
ncep_133_gtb.h ncep_140_gtb.h ncep_141_gtb.h ncep_opn_gtb.h		\
ncep_reanal_gtb.h NclAdvancedFile.h NclAdvancedFileStructure.h		\
NclAdvancedGroup.h NclApi.h NclAtt.h NclBuiltIns.h			\
NclBuiltInSupport.h NclCallBacksI.h NclCCM.h NclCoordVar.h		\
NclDataDefs.h NclData.h NclDriver.h NclExitCode.h NclFile.h		\
NclFileInterfaces.h NclFileVar.h NclGlobalParams.h NclGlobalVars.h	\
NclGRIB2.h NclGRIB.h NclGroup.h NclHDF.h NclHLUObj.h NclHLUVar.h	\
NclList.h NclMdInc.h NclMultiDValData.h NclMultiDValHLUObjData.h	\
NclMultiDVallistData.h NclMultiDValnclfileData.h			\
NclOneDValCoordData.h NclOptions.h NclProf.h NclType.h NclTypelist.h	\
NclVar.h OpsFuncs.h OpsList.h SrcTree.h Symbol.h tables.h		\
VarSupport.h
