# This is part of the NCL package.
# Ed Hartnett 9/1/18

# Install these data files.
ncarg_databasedir = $(prefix)/lib/ncarg/database/ftfonts
ncarg_database_HEADERS = Aristarcoj2.ttf cmsy10.ttf VeraBI.ttf		\
VeraMoBd.ttf VeraMoIt.ttf VeraSeBd.ttf Vera.ttf cmex10.ttf VeraBd.ttf	\
VeraIt.ttf VeraMoBI.ttf VeraMono.ttf VeraSe.ttf
