# This is part of the NCL package.
# Ed Hartnett 9/1/18

# LDADD = ${top_builddir}/ncarg2d/src/libncarg/libncarg.la
# LDADD += ${top_builddir}/common/src/libncarg_c/libncarg_c.la

# bin_PROGRAMS = pwritxnt

# PWRITXNT = ${top_builddir}/ncarg2d/src/db/pwritxnt/pwritxnt

# pwritxnt_SOURCES = ccheck.f creb15.f crebin.f dcheck.f dport.f	\
# mkmsk.f pcrbin.f xtch.f

# pwritdata:
# 	$(PWRITXNT)

# EXTRA_DIST = pwritxc1 pwritxc2 pwritxd1 pwritxd2
