# This is an automake file for NCL.
# Ed Hartnett 9/3/18

exampledir = $(prefix)/lib/ncarg/examples
example_HEADERS = \
	cpexcc.f cpex01.f cpex02.f cpex03.f cpex04.f cpex05.f cpex06.f \
	cpex07.f cpex08.f cpex09.f cpex10.f cpex11.f cpex12.f cpex13.f \
	cpex14.f cpex15.f cpex16.f cbex01.f cpex14.dat cpex16.dat
