# This is an automake file for NCL.
# Ed Hartnett 9/3/18

exampledir = $(prefix)/lib/ncarg/examples
example_HEADERS =  ctcbay.f ctex01.f ctex02.f ctfite.f ctgaus.f ctgc23.f ctgeo1.f \
	ctgeo2.f ctgeo3.f ctiscp.f ctisc2.f ctllg1.f ctllg2.f ctllg3.f \
	ctnccl.f ctorca.f ctpopg.f ctswth.f cttd01.f cttd02.f ctterr.f \
	ctwng1.f ctwng2.f \
	ctcbay.dat ctfite.dat ctgaus.dat ctgeo3.dat ctiscp.dat ctnccl.dat \
	ctorca.dat ctpopg.dat ctswth.dat ctterr.dat ctwng1.dat ctwng2.dat
